test/arrays/dinan/no_element_type_error.good
no_element_type_error.chpl:2: error: syntax error near '='
