test/arrays/dinan/no_element_type_error.chpl
var X : [0..19] real;
var XU: [0..10] = X[10..19];
